fix pour l'alignement des items du tableau

--- a/projet-web/src/App.css
+++ b/projet-web/src/App.css
@@ -114,21 +114,31 @@ height: 50vh;
 }
 
 .fixed_header thead tr {
- display: block;
+ display: flex;
  border-radius: 25px;
  background-color: #f3f3f3;
 }
 
+.fixed_header tbody tr {
+  display: flex;
+  border-radius: 0px;
+ }
+
 .fixed_header th {
 padding: 5px;
+flex: 25%;
 text-align: center;
-max-width: 300px;
+min-width: 50px;
+width: 300px;
 }
+
 
 .fixed_header td {
   padding: 5px;
+  flex: 25%;
   text-align: center;
-  max-width: 300px;
+  min-width: 50px;
+  width: 300px;
   }
 
 /* FIN ISSU DE*/
